<resources>
    <string name="app_name">NafhasehaProvider</string>
    <string name="welcome_back">Welcome back</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile</string>
    <string name="city">City</string>
    <string name="district">District</string>
    <string name="i_agree_to_the_privacy_policy">I agree to the privacy policy</string>
    <string name="create_an_account">Create an account</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="confirm_your_phone_number">Confirm your phone number</string>
    <string name="we_have_sent_a_verification_code_to_the_number">We have sent a verification code to the number</string>
    <string name="resend_the_code">Resend the code</string>
    <string name="home">Home</string>
    <string name="packages">Packages</string>
    <string name="orders">Orders</string>
    <string name="setting">Setting</string>
    <string name="add_car">Add Car</string>
    <string name="services_nafhaseha">Services Nafhaseha</string>
    <string name="service_name">Service name</string>
    <string name="package1">Package1</string>
    <string name="my_car">My Car</string>
    <string name="your_car">Your car</string>
    <string name="vehicle_class">Vehicle class</string>
    <string name="periodic_examination_date">Examination date</string>
    <string name="car_plate">Car plate</string>
    <string name="add_a_new_car">Add a new car</string>
    <string name="type_car">Type car</string>
    <string name="car_model">Car model</string>
    <string name="car_image">Car image</string>
    <string name="my_profile">My Profile</string>
    <string name="update_profile">Update Profile</string>
    <string name="wallet">Wallet</string>
    <string name="contact_us">Contact us</string>
    <string name="language">Language</string>
    <string name="about_app">About app</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="frequently_asked_questions">Frequently asked questions</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="logout">LogOut</string>
    <string name="notes">Notes</string>
    <string name="send">Send</string>
    <string name="recent_shipping_transactions">Recent shipping transactions</string>
    <string name="amount_charged">Amount charged</string>
    <string name="successfully">Successfully</string>
    <string name="charge_now">Charge now</string>
    <string name="email">Email</string>
    <string name="update">Update</string>
    <string name="notification">Notification</string>
    <string name="new_order">New</string>
    <string name="expired_order">Expired Order</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="update_order">Update Order</string>
    <string name="your_request_has_been_sent_successfully">Your request has been sent successfully</string>
    <string name="we_are_looking_for_offers_for_your_order">We are looking for offers for your order</string>
    <string name="offers">Offers</string>
    <string name="shear_app">Share with your friends</string>
    <string name="rating_app">Rating App</string>
    <string name="do_you_need_a_surface_or_not">Do you need a surface or not?</string>
    <string name="service_evaluation">Service evaluation</string>
    <string name="to_provide_the_best_quality">To provide the best quality</string>
    <string name="submit_your_review">Submit your review</string>
    <string name="subscription">Subscribe now</string>
    <string name="mobile_number_is_required">Mobile number is required</string>
    <string name="password_is_required">Password is required</string>
    <string name="the_password_is_not_less_than_four_letters_numbers_or_letters_and_numbers">The password is not less than four letters, numbers, or letters and numbers</string>
    <string name="success">Success</string>
    <string name="ops">Ops!</string>
    <string name="there_is_no_internet_connection_please_connect_to_the_internet">There is no internet connection, please connect to the internet</string>
    <string name="invitation_code">Invitation code</string>
    <string name="i_have_no_problem">I have no problem ?</string>
    <string name="send_code">Send Code</string>
    <string name="change_password">Change password</string>
    <string name="create_a_new_password">Create a new password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="save">Save</string>
    <string name="new_password_is_required">New password is required</string>
    <string name="confirm_password_is_required">Confirm password is required</string>
    <string name="please_enter_the_code_sent_to_the_mobile_number">Please enter the code sent to the mobile number</string>
    <string name="address">Address</string>
    <string name="select">Select</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="search_here">Search here...</string>
    <string name="confirm_address">Confirm address</string>
    <string name="optional">Optional</string>
    <string name="log_out_of_the_application">Log out of the application</string>
    <string name="are_you_sure_you_will_be_redirected_to_the_login_page">are you sure ? You will be redirected to the login page.</string>
    <string name="confirm">Confirm</string>
    <string name="hello">Hello</string>
    <string name="services_nearby">Services nearby</string>
    <string name="filter">Filter</string>
    <string name="permission">If you reject permission,you can not use this service\n\nPlease turn on permissions at [Setting] > [Permission]</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="done">Done</string>
    <string name="name_is_required">Name is required</string>
    <string name="address_is_required">Address is required</string>
    <string name="please_selected_city">Please selected city</string>
    <string name="please_selected_aras">Please selected aras</string>
    <string name="sr">SR</string>
    <string name="to_increase_your_credit_share_the_invitation_code_with_your_friends">To increase your credit, share the invitation code with your friends...</string>
    <string name="upon_completing_the_first_request_a_balance_will_be_added_to_your_wallet_and_your_friend_s_wallet">Upon completing the first request, a balance will be added to your \n\ wallet and your friend\'s wallet</string>
    <string name="share_the_invitation_code">Share the invitation code</string>
    <string name="transactions">Transactions</string>
    <string name="invite_you_using_refer_code">Invite you using refer code</string>
    <string name="let_me_recommend_you_this_application">Let me recommend you this application</string>
    <string name="car_brand">Car Brand</string>
    <string name="please_complete_the_plate_information">Please complete the plate information</string>
    <string name="choose_the_type_of_car">Choose the type of vehicle</string>
    <string name="choose_the_car_brand">Choose the car brand</string>
    <string name="choose_the_car_category">Choose the car category</string>
    <string name="choose_the_year_of_manufacture_of_the_car">Choose the year of manufacture of the vehicle</string>
    <string name="attach_a_photo_of_the_car">Attach a photo of the car</string>
    <string name="are_you_sure_to_delete_the_car">Are you sure to delete the car?</string>
    <string name="my_dear">My Dear</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="update_data_car">Update data car</string>
    <string name="month">Month</string>
    <string name="all">ALL</string>
    <string name="minute">Minute</string>
    <string name="select_car">Select Car</string>
    <string name="service_type">Service Type</string>
    <string name="service">Service</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="my_location">My Location</string>
    <string name="details">Details</string>
    <string name="holiday_photos">Car breakdown images</string>
    <string name="coupon_discount">Coupon Discount</string>
    <string name="enter_the_discount_coupon">Enter the discount coupon</string>
    <string name="value_discount">Value discount</string>
    <string name="send_request">Send request</string>
    <string name="you_cannot_add_more_than_5_photos">You cannot add more than 5 photos</string>
    <string name="choose_the_type_of_surface">Choose the type of surface</string>
    <string name="delivery_location">Delivery location</string>
    <string name="choose_the_side_you_want_to_install">Choose the side you want to install</string>
    <string name="enter_coupon">Enter coupon</string>
    <string name="time_is_required">Time is required</string>
    <string name="date_is_required">Date is required</string>
    <string name="please_select_time">Please select a time</string>
    <string name="sign">Sign</string>
    <string name="the_job">The job</string>
    <string name="the_home">The home</string>
    <string name="custom_address">Custom address</string>
    <string name="please_enter_your_location">Please enter your location</string>
    <string name="please_enter_a_delivery_location">Please enter a delivery location</string>
    <string name="cancil">Cancil</string>
    <string name="please_choose_the_type_of_service">Please choose the type of service</string>
    <string name="please_select_the_service">Please select the service</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="front">Front</string>
    <string name="behind">Behind</string>
    <string name="code">Code</string>
    <string name="complaint">Complaint</string>
    <string name="suggestion">Suggestion</string>
    <string name="please_specify_the_title_of_the_letter_complaint_or_suggestion">Please specify the title of the letter, complaint or suggestion</string>
    <string name="type_the_text_of_the_message">Type the text of the message</string>
    <string name="service_provider_name_service_center">Service Provider Name (Service Center)</string>
    <string name="center">Center</string>
    <string name="account_type">Account type</string>
    <string name="choose_the_service">Choose the service</string>
    <string name="a_copy_of_the_commercial_register_or_national_id">Commercial register</string>
    <string name="i_declare_that_i_have_read_the_mentioned_conditions_and_agreed_to_them">I declare that I have read the mentioned conditions and agreed to them.</string>
    <string name="person">Person</string>
    <string name="title_activity_maps2">MapsActivity2</string>
    <string name="please_select_an_account_type">Please select an account type</string>
    <string name="attach_the_photo">Attach the photo</string>
    <string name="you_do_not_agree_to_the_terms_and_conditions">You do not agree to the terms and conditions</string>
    <string name="do_you_have_home_service">Do you have home service?</string>
    <string name="choose_your_services">Choose your services</string>
    <string name="latest_requests">Latest requests</string>
    <string name="i_withdraw_now">I withdraw now</string>
    <string name="ratings">Ratings</string>
    <string name="previous_works">Previous works :</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="enter_the_current_password">Enter the current password</string>
</resources>