<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/menuHome"
        android:icon="@drawable/icon_home"
        android:title="@string/home" />


    <item
        android:id="@+id/menuWallet"
        android:icon="@drawable/icons_wallet"
        android:title="@string/wallet" />


<!--    <item-->
<!--        android:id="@+id/menuServiceMap"-->
<!--        android:title="@string/services_nearby" />-->

    <item
        android:id="@+id/menuOrders"
        android:icon="@drawable/icon_order"
        android:title="@string/orders" />

    <item
        android:id="@+id/menuSetting"
        android:icon="@drawable/icon_setting"
        android:title="@string/setting" />

</menu>