<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ProgressBar
            android:visibility="invisible"
            android:id="@+id/progress_bar"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:elevation="@dimen/_20sdp"
            android:progressTint="@color/appColor"
            app:layout_constraintBottom_toBottomOf="@+id/iv_image_user"
            app:layout_constraintEnd_toEndOf="@+id/iv_image_user"
            app:layout_constraintStart_toStartOf="@+id/iv_image_user"
            app:layout_constraintTop_toTopOf="@+id/iv_image_user" />


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_image_user"
            android:layout_width="@dimen/_90sdp"
            android:layout_height="@dimen/_90sdp"
            android:src="@drawable/man"
            app:civ_border_color="@color/grey4"
            app:civ_border_width="@dimen/_4sdp"
            android:layout_marginTop="@dimen/_8sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tv_name_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:fontFamily="@font/tajawal_bold"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_image_user" />

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_name_user">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_12sdp"
                android:background="@drawable/shape_layout"
                android:backgroundTint="#EAF1FA">


                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:fontFamily="@font/tajawal_bold"
                    android:text="@string/my_profile"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14ssp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/update_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/shape_text2"
                    android:text="@string/update_profile"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView4"
                    android:padding="@dimen/_10sdp"
                    android:drawableEnd="@drawable/arrow_back"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:gravity="center|start"
                    android:textAlignment="viewStart"
                    android:drawablePadding="@dimen/_8sdp"
                    android:textSize="@dimen/_10ssp"
                    android:fontFamily="@font/tajawal_bold"
                    android:textColor="@color/black"
                    android:drawableStart="@drawable/ic_profile" />


                <TextView
                    android:id="@+id/change_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:background="@drawable/shape_text2"
                    android:drawableStart="@drawable/icons_password"
                    android:drawablePadding="@dimen/_8sdp"
                    android:fontFamily="@font/tajawal_bold"
                    android:gravity="center|start"
                    android:padding="@dimen/_10sdp"
                    android:drawableEnd="@drawable/arrow_back"
                    android:text="@string/change_password"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/update_profile" />



                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:fontFamily="@font/tajawal_bold"
                    android:text="@string/setting"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14ssp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/change_password" />


                <TextView
                    android:id="@+id/contact_us"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:background="@drawable/shape_text2"
                    android:drawableStart="@drawable/contact_us"
                    android:drawablePadding="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:fontFamily="@font/tajawal_bold"
                    android:gravity="center|start"
                    android:padding="@dimen/_10sdp"
                    android:drawableEnd="@drawable/arrow_back"
                    android:text="@string/contact_us"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView5" />


                <TextView
                    android:id="@+id/language"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:background="@drawable/shape_text2"
                    android:drawableStart="@drawable/lang"
                    android:drawablePadding="@dimen/_8sdp"
                    android:fontFamily="@font/tajawal_bold"
                    android:gravity="center|start"
                    android:padding="@dimen/_10sdp"
                    android:drawableEnd="@drawable/arrow_back"
                    android:text="@string/language"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10ssp"
                    android:layout_marginTop="@dimen/_8sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/contact_us" />


                <TextView
                    android:id="@+id/about_app"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:background="@drawable/shape_text2"
                    android:drawableStart="@drawable/about_app"
                    android:drawablePadding="@dimen/_8sdp"
                    android:fontFamily="@font/tajawal_bold"
                    android:gravity="center|start"
                    android:padding="@dimen/_10sdp"
                    android:drawableEnd="@drawable/arrow_back"
                    android:text="@string/about_app"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/language" />


                <TextView
                    android:id="@+id/terms_and_conditions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:background="@drawable/shape_text2"
                    android:drawableStart="@drawable/term"
                    android:drawablePadding="@dimen/_8sdp"
                    android:fontFamily="@font/tajawal_bold"
                    android:gravity="center|start"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:padding="@dimen/_10sdp"
                    android:drawableEnd="@drawable/arrow_back"
                    android:text="@string/terms_and_conditions"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/about_app" />


                <TextView
                    android:id="@+id/frequently_asked_questions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:background="@drawable/shape_text2"
                    android:drawableStart="@drawable/fq"
                    android:drawablePadding="@dimen/_8sdp"
                    android:fontFamily="@font/tajawal_bold"
                    android:gravity="center|start"
                    android:padding="@dimen/_10sdp"
                    android:drawableEnd="@drawable/arrow_back"
                    android:text="@string/frequently_asked_questions"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/terms_and_conditions" />


                <TextView
                    android:id="@+id/privacy_policy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:background="@drawable/shape_text2"
                    android:drawableStart="@drawable/privacy"
                    android:drawablePadding="@dimen/_8sdp"
                    android:fontFamily="@font/tajawal_bold"
                    android:gravity="center|start"
                    android:padding="@dimen/_10sdp"
                    android:drawableEnd="@drawable/arrow_back"
                    android:text="@string/privacy_policy"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/frequently_asked_questions" />


                <TextView
                    android:id="@+id/shearing"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:background="@drawable/shape_text2"
                    android:drawableStart="@drawable/ic_shareing"
                    android:drawablePadding="@dimen/_8sdp"
                    android:fontFamily="@font/tajawal_bold"
                    android:gravity="center|start"
                    android:padding="@dimen/_10sdp"
                    android:drawableEnd="@drawable/arrow_back"
                    android:text="@string/shear_app"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/privacy_policy" />



                <TextView
                    android:id="@+id/rating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:background="@drawable/shape_text2"
                    android:drawableStart="@drawable/ic_star"
                    android:drawablePadding="@dimen/_8sdp"
                    android:fontFamily="@font/tajawal_bold"
                    android:gravity="center|start"
                    android:padding="@dimen/_10sdp"
                    android:drawableEnd="@drawable/arrow_back"
                    android:text="@string/rating_app"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/shearing" />



                <TextView
                    android:id="@+id/log_out"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:background="@drawable/shape_text2"
                    android:drawableStart="@drawable/logout"
                    android:drawablePadding="@dimen/_8sdp"
                    android:fontFamily="@font/tajawal_bold"
                    android:gravity="center|start"
                    android:layout_marginBottom="@dimen/_32sdp"
                    android:padding="@dimen/_10sdp"
                    android:drawableEnd="@drawable/arrow_back"
                    android:text="@string/logout"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_10ssp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rating" />



            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>